fix: Prevent callout on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -25,4 +25,5 @@ img {
    */
   pointer-event: none;
   user-select: none;
+  -webkit-touch-callout: none;
 }
